--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "proxy": "http://localhost:8080/",
   "devDependencies": {
     "enzyme": "^2.8.2",
-    "react-scripts": "0.9.0",
+    "react-scripts": "^0.9.0",
     "react-test-renderer": "^15.5.4"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
